# forlorn-melody

./: CMakeLists.txt  README.md  main.cpp
Game/: CMakeLists.txt  MainGame.cpp  MainGame.h
GameEngineBase/: CMakeLists.txt  Camera.cpp  Camera.h  Chrono.cpp  Chrono.h  Constants.h  FrameRateLimiter.cpp  FrameRateLimiter.h  GraphicsUtils.h  IRenderBatch.h  IRenderer.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  Light.cpp  Light.h  Logger.cpp  Logger.h  MasterRenderer.cpp  MasterRenderer.h  Node.cpp  Node.h  NodeBatch.cpp  NodeBatch.h  ObjectModel.cpp  ObjectModel.h  ObjectModelLoader.cpp  ObjectModelLoader.h  ResourceCache.cpp  ResourceCache.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  StaticShaderProgram.cpp  StaticShaderProgram.h  Terrain.cpp  Terrain.h  TerrainBatch.cpp  (+7 more)
GameEngineCustom/: BackgroundRenderBatch.cpp  BackgroundRenderBatch.h  BackgroundShaderProgram.cpp  BackgroundShaderProgram.h  CMakeLists.txt  Constants.h  ImageNode.cpp  ImageNode.h  Player.cpp  Player.h
Resources/Shaders/: fragmentShader.frag  fragmentShaderBackground.frag  terrainFragmentShader.frag  terrainVertexShader.vert  vertexShader.vert  vertexShaderBackground.vert
